--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.btn-p {
+    background-color: #9333EA;
+}
+
+.text-p {
+    color: #9333EA;
+}
